[tool.poetry]
name = "fraud-detection-use-case"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
gqlalchemy = "^1.3.1"
pyarrow = "^7.0.0"
python-dotenv = "^0.19.2"
ipykernel = "^6.9.0"
pandas = "^1.4.1"
scikit-learn = "^1.1.2"
matplotlib = "^3.5.1"
seaborn = "^0.11.2"
PyYAML = "^6.0"
notebook = "^6.4.12"
importlib-resources = "^5.4.0"
Faker = "^14.2.0"
faker-vehicle = "^0.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
